[package]
name    = "rolldown_binding"
version = "0.1.0"

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
doctest    = false

[dependencies]
anyhow                                  = { workspace = true }
async-channel                           = { workspace = true }
dashmap                                 = { workspace = true }
derivative                              = { workspace = true }
futures                                 = { workspace = true }
napi                                    = { workspace = true }
napi-derive                             = { workspace = true }
oxc_transform_napi                      = { workspace = true }
rolldown                                = { workspace = true }
rolldown_common                         = { workspace = true }
rolldown_error                          = { workspace = true, features = ["napi"] }
rolldown_plugin                         = { workspace = true }
rolldown_plugin_dynamic_import_vars     = { workspace = true }
rolldown_plugin_glob_import             = { workspace = true }
rolldown_plugin_load_fallback           = { workspace = true }
rolldown_plugin_manifest                = { workspace = true }
rolldown_plugin_module_preload_polyfill = { workspace = true }
rolldown_plugin_transform               = { workspace = true }
rolldown_plugin_wasm                    = { workspace = true }
rolldown_sourcemap                      = { workspace = true }
rolldown_tracing                        = { workspace = true }
rolldown_utils                          = { workspace = true }
rustc-hash                              = { workspace = true }
serde                                   = { workspace = true }
tracing                                 = { workspace = true }

[target.'cfg(all(not(target_os = "linux"), not(target_os = "freebsd"), not(target_family = "wasm")))'.dependencies]
mimalloc = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
mimalloc = { workspace = true, features = ["local_dynamic_tls"] }

[build-dependencies]
napi-build = { workspace = true }
