[package]
name = "rolldown_binding"
version = "0.1.0"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
async-channel = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
oxc = { workspace = true }
oxc_parser_napi = { workspace = true }
oxc_resolver_napi = { workspace = true }
oxc_transform_napi = { workspace = true }
rolldown = { workspace = true }
rolldown_common = { workspace = true }
rolldown_error = { workspace = true, features = ["napi"] }
rolldown_plugin = { workspace = true }
rolldown_plugin_alias = { workspace = true }
rolldown_plugin_asset = { workspace = true }
rolldown_plugin_asset_import_meta_url = { workspace = true }
rolldown_plugin_build_import_analysis = { workspace = true }
rolldown_plugin_dynamic_import_vars = { workspace = true }
rolldown_plugin_import_glob = { workspace = true }
rolldown_plugin_isolated_declaration = { workspace = true }
rolldown_plugin_json = { workspace = true }
rolldown_plugin_load_fallback = { workspace = true }
rolldown_plugin_manifest = { workspace = true }
rolldown_plugin_module_federation = { workspace = true }
rolldown_plugin_module_preload_polyfill = { workspace = true }
rolldown_plugin_replace = { workspace = true }
rolldown_plugin_reporter = { workspace = true }
rolldown_plugin_transform = { workspace = true }
rolldown_plugin_vite_resolve = { workspace = true }
rolldown_plugin_wasm_fallback = { workspace = true }
rolldown_plugin_wasm_helper = { workspace = true }
rolldown_plugin_web_worker_post = { workspace = true }
rolldown_sourcemap = { workspace = true }
rolldown_tracing = { workspace = true }
rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }

[target.'cfg(all(not(target_os = "linux"), not(target_os = "freebsd"), not(target_family = "wasm")))'.dependencies]
mimalloc-safe = { workspace = true, features = ["skip_collect_on_exit"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
mimalloc-safe = { workspace = true, features = ["skip_collect_on_exit", "local_dynamic_tls"] }

[build-dependencies]
napi-build = { workspace = true }
