[package]
name = "rolldown_binding"
version = "0.1.0"
publish = false

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
async-channel = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
num_cpus = { workspace = true }
oxc = { workspace = true }
oxc_minify_napi = { workspace = true }
oxc_parser_napi = { workspace = true }
oxc_resolver_napi = { workspace = true }
oxc_transform_napi = { workspace = true }
rolldown = { workspace = true, features = ["experimental"] }
rolldown_common = { workspace = true }
rolldown_dev = { workspace = true }
rolldown_devtools = { workspace = true }
rolldown_error = { workspace = true, features = ["napi"] }
rolldown_plugin = { workspace = true }
rolldown_plugin_esm_external_require = { workspace = true }
rolldown_plugin_isolated_declaration = { workspace = true }
rolldown_plugin_replace = { workspace = true }
rolldown_plugin_utils = { workspace = true }
rolldown_plugin_vite_alias = { workspace = true }
rolldown_plugin_vite_build_import_analysis = { workspace = true }
rolldown_plugin_vite_dynamic_import_vars = { workspace = true }
rolldown_plugin_vite_import_glob = { workspace = true }
rolldown_plugin_vite_json = { workspace = true }
rolldown_plugin_vite_load_fallback = { workspace = true }
rolldown_plugin_vite_manifest = { workspace = true }
rolldown_plugin_vite_module_preload_polyfill = { workspace = true }
rolldown_plugin_vite_react_refresh_wrapper = { workspace = true }
rolldown_plugin_vite_reporter = { workspace = true }
rolldown_plugin_vite_resolve = { workspace = true }
rolldown_plugin_vite_transform = { workspace = true }
rolldown_plugin_vite_wasm_fallback = { workspace = true }
rolldown_plugin_vite_wasm_helper = { workspace = true }
rolldown_plugin_vite_web_worker_post = { workspace = true }
rolldown_sourcemap = { workspace = true }
rolldown_tracing = { workspace = true }
rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
string_wizard = { workspace = true }
sugar_path = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(all(not(target_os = "linux"), not(target_os = "freebsd"), not(target_family = "wasm")))'.dependencies]
mimalloc-safe = { workspace = true, features = ["skip_collect_on_exit"] }

[target.'cfg(all(any(target_os = "linux", target_os = "freebsd"), not(target_arch = "aarch64"), not(target_env = "ohos")))'.dependencies]
mimalloc-safe = { workspace = true, features = ["skip_collect_on_exit", "local_dynamic_tls"] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
mimalloc-safe = { workspace = true, features = [
  "skip_collect_on_exit",
  "no_opt_arch",
  "local_dynamic_tls",
] }

[build-dependencies]
napi-build = { workspace = true }

[features]
default_global_allocator = []
