[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_wasm_binding"
repository.workspace = true
version              = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rolldown     = { path = "../rolldown/" }
rolldown_fs  = { path = "../rolldown_fs", features = ["memory"], default-features = false }
tokio        = { workspace = true, default-features = false, features = ["rt", "macros", "sync"] }
wasm-bindgen = "0.2.92"

console_error_panic_hook = "0.1.7"
sugar_path               = { workspace = true }
