[package]
name = "rolldown_binding_watcher"
version = "0.1.0"
publish = true

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
rolldown_error = { workspace = true }
rolldown_watcher = { workspace = true }

# --- NAPI-RS required ---
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
