[package]
name = "rolldown_cli_native"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
rolldown = { path = "../rolldown" }
rolldown_common = { path = "../rolldown_common" }
rolldown_utils = { path = "../rolldown_utils" }
anyhow = { workspace = true }
mimalloc-safe = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
rolldown_tracing = { path = "../rolldown_tracing" }
