[package]
name    = "rolldown_css"
version = "0.1.0"


edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = { workspace = true }
lightningcss = { workspace = true }
arcstr       = { workspace = true }

[lints]
workspace = true
