[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_css"
repository.workspace = true
version              = "0.1.0"

[lib]
doctest = false

[dependencies]
anyhow       = { workspace = true }
lightningcss = { workspace = true, features = ["into_owned"] }

[lints]
workspace = true
