[package]
name = "rolldown_debug"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dashmap = { workspace = true }
rolldown_debug_action = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["valuable"] }
tracing-core = { workspace = true, features = ["std"] }
tracing-serde = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "valuable"] }
valuable = { workspace = true }
valuable-serde = { workspace = true }

[lints]
workspace = true
