[package]
name = "rolldown_debug_action"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
ts-rs = { workspace = true }
