[package]
name = "rolldown_devtools_metrics"
version = "1.1.4"
edition.workspace = true
license = "MIT"
publish = true
description = "In-memory aggregation of Rolldown devtools events into an agent-readable metrics report"
readme = "../../README.md"

[lib]
doctest = false
test = false

[dependencies]
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
