[package]
name = "rolldown_ecmascript"
version = "1.2.0"
publish = true
description = "ECMAScript AST and parsing utilities for Rolldown"
readme = "../../README.md"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
oxc = { workspace = true }
oxc_ast = { workspace = true }
oxc_sourcemap = { workspace = true }
oxc_str = { workspace = true }
rolldown_error = { workspace = true }
self_cell = { workspace = true }

[lib]
doctest = false

[package.metadata.cargo-shear]
# `oxc_ast` is depended on directly only to enable its `disable_old_builder` feature
# on the copy re-exported by the `oxc` umbrella crate (which has no passthrough
# feature). Code imports it via `oxc::ast::…`.
ignored = ["oxc_ast"]
