[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_ecmascript_utils"
repository.workspace = true
version              = "0.1.0"

[dependencies]
oxc             = { workspace = true }
rolldown_common = { workspace = true }
smallvec        = { workspace = true }


[lints]
workspace = true
