[package]
name = "rolldown_ecmascript_utils"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxc = { workspace = true }
rolldown_common = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
