[package]
name = "rolldown_ecmascript_utils"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Helper utilities for ECMAScript processing"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
memchr = { workspace = true }
oxc = { workspace = true }
rolldown_common = { workspace = true }
rolldown_utils = { workspace = true }
smallvec = { workspace = true }
