[package]
description = "rolldown_error"
name        = "rolldown_error"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow            = { workspace = true }
arcstr            = { workspace = true }
ariadne           = { workspace = true }
napi              = { workspace = true, optional = true }
oxc               = { workspace = true }
rolldown_resolver = { workspace = true }
sugar_path        = { workspace = true }
