[package]
name = "rolldown_filter_analyzer"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow         = { workspace = true }
arcstr         = { workspace = true }
oxc            = { workspace = true }
rolldown_error = { workspace = true }
rolldown_ecmascript = { workspace = true }

[lints]
workspace = true
