[package]
name = "rolldown_filter_analyzer"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc = { workspace = true }
rolldown_ecmascript = { workspace = true }
