[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_filterable_analyzer"
repository.workspace = true
version              = "0.1.0"

[dependencies]
anyhow         = { workspace = true }
arcstr         = { workspace = true }
oxc            = { workspace = true }
rolldown_error = { workspace = true }

[lints]
workspace = true
