[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_filterable_analyzer"
repository.workspace = true
version              = "0.1.0"

[dependencies]
anyhow         = { workspace = true }
arcstr         = { workspace = true }
oxc            = { workspace = true }
oxc_cfg        = { path = "/home/victor/Documents/oxc/oxc/crates/oxc_cfg/", version = "0.26.0" }
rolldown_error = { workspace = true }

[lints]
workspace = true
