[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_filterable_analyzer"
repository.workspace = true
version              = "0.1.0"

[dependencies]
anyhow         = { workspace = true }
arcstr         = { workspace = true }
oxc            = { workspace = true }
oxc_cfg        = { git = "https://github.com/oxc-project/oxc", branch = "feat/add-implicit-return-inst", version = "0.27.0" }
rolldown_error = { workspace = true }

[lints]
workspace = true
