[package]
name = "rolldown_fs_watcher"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Filesystem watching implementation for Rolldown"

[dependencies]
rolldown-notify = { workspace = true }
rolldown-notify-debouncer-full = { workspace = true }
rolldown_error = { workspace = true }

[lints]
workspace = true

[lib]
test = false
doctest = false
