[package]
name = "rolldown_fs_watcher"
version = "1.0.3"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Filesystem watching implementation for Rolldown"
readme = "../../README.md"

[dependencies]
rolldown-notify = { workspace = true }
rolldown-notify-debouncer-full = { workspace = true }
rolldown_error = { workspace = true }

[lints]
workspace = true

[lib]
test = false
doctest = false
