[package]
name    = "rolldown_node_binding"
version = "0.0.1"


homepage.workspace   = true
license.workspace    = true
edition.workspace    = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait      = { workspace = true }
derivative       = { workspace = true }
futures          = { workspace = true }
napi             = { version = "2.11.1", features = ["full"] }
napi-derive      = { version = "2.11.0" }
rolldown         = { path = "../rolldown" }
rolldown_error   = { path = "../rolldown_error" }
rolldown_tracing = { path = "../rolldown_tracing" }
rustc-hash       = { workspace = true }
scoped-tls       = { workspace = true }
serde            = { workspace = true }
tracing          = { workspace = true }
anyhow           = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = "0.2"

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[build-dependencies]
napi-build = "2"
