[package]
name    = "rolldown_oxc_utils"
version = "0.1.0"


homepage.workspace   = true
license.workspace    = true
edition.workspace    = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
oxc = { workspace = true, features = ["semantic", "codegen"] }

smallvec = { workspace = true }
