[package]
name    = "rolldown_oxc_utils"
version = "0.1.0"


edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
oxc     = { workspace = true, features = ["semantic", "codegen"] }
oxc_ast = { workspace = true }

self_cell = { workspace = true }
smallvec  = { workspace = true }
